[gd_scene load_steps=7 format=2]

[ext_resource path="res://bullet generator/generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/bosses/boss1/attackPattern1/generatorL.gd" type="Script" id=2]
[ext_resource path="res://enemies/bosses/boss1/attackPattern1/generatorR.gd" type="Script" id=3]
[ext_resource path="res://enemies/bosses/boss1/attackPattern1/generatorC.gd" type="Script" id=4]
[ext_resource path="res://enemies/bosses/boss1/attackPattern1/generatorC2.gd" type="Script" id=5]
[ext_resource path="res://enemies/bosses/boss1/attackPattern1/attackPattern1.gd" type="Script" id=6]

[node name="AttackPattern1" type="Node2D"]
script = ExtResource( 6 )

[node name="GeneratorR" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 200, 0 )
script = ExtResource( 3 )

[node name="GeneratorL" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -200, 0 )
script = ExtResource( 2 )

[node name="GeneratorC" parent="." instance=ExtResource( 1 )]
visible = false
script = ExtResource( 4 )

[node name="GeneratorC2" parent="." instance=ExtResource( 1 )]
visible = false
script = ExtResource( 5 )

[node name="PatternStartTimer" type="Timer" parent="."]
one_shot = true

[node name="PatternTimeLimit" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[connection signal="start_bullet_pattern" from="." to="GeneratorR" method="_on_attackPattern1_start_bullet_pattern"]
[connection signal="start_bullet_pattern" from="." to="GeneratorL" method="_on_attackPattern1_start_bullet_pattern"]
[connection signal="start_bullet_pattern" from="." to="GeneratorC2" method="_on_attackPattern1_start_bullet_pattern"]
[connection signal="start_bullet_pattern" from="." to="GeneratorC" method="_on_attackPattern1_start_bullet_pattern"]
[connection signal="timeout" from="PatternStartTimer" to="." method="_on_PatternStartTimer_timeout"]
[connection signal="timeout" from="PatternTimeLimit" to="." method="_on_PatternTimeLimit_timeout"]
